<resources>
    <string name="app_name">Application</string>
    <string name="username">Username</string>
    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="register">Регистрация</string>
    <string name="come_in">Авторизация</string>
    <string name="Interests">Интересы</string>
    <string name="start_text">Communicate. \n Learn. \n English.</string>
    <string name="learn">Learn.</string>
    <string name="english">English.</string>
    <string name="prestart_text">Welcome to \nEnglish \nMessenger</string>
    <string name="get_started">Начать</string>
    <string name="create_an_account">Создать аккаунт</string>
    <string name="first_name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="login_to_account">Войти в аккаунт</string>
    <string name="your_username">Введи свой псевдоним</string>
    <string name="birth_date">Введи свою дату рождения</string>
    <string name="dd_mm_yyyy">дд.мм.гггг</string>
    <string name="edit_text_username">Имя пользователя</string>
    <string name="add_a_photo">Добавить фото?</string>
    <string name="language_level">Давай проверим твой уровень английского</string>
    <string name="continue_check_level">Продолжить</string>
    <string name="choose_interests">Выбери интересующие тебя темы</string>
    <string name="check_results">Узнать результаты</string>
    <string name="congratulations">Поздравляю! \n Твой уровень</string>
    <string name="let_s_go">Вперед!</string>
    <string name="settings">Настройки</string>
    <string name="sign_out">Выйти</string>
    <string name="ic_letter">Чаты</string>
    <string name="ic_home">Профиль</string>
    <string name="ic_theory">Словарь</string>
    <string name="ic_grid">Обучение</string>
    <string name="training">Обучение</string>
    <string name="cards">Карточки</string>
    <string name="cards_description">Изучай и повторяй новые слова и \nвыражения</string>
    <string name="theory">Теория</string>
    <string name="theory_description">Краткие справки по основным грамматическим темам</string>
    <string name="exercises">Упражнения</string>
    <string name="exercises_description">Практикуйся в применении \nизученного материала </string>
    <string name="learn_button">Учить</string>
    <string name="learned_words">Выучено слов</string>
    <string name="studying_words">Изучаю</string>
    <string name="learned">Выучено</string>
    <string name="repeat">Повторить</string>
    <string name="not_yet_learned">Пока ничего не выучено 😔</string>
    <string name="continue_studying">Продолжайте изучение!</string>
    <string name="studying">Изучаю</string>
    <string name="add_word">Добавить слово</string>
    <string name="adding_words">Добавьте слова для \nих изучения</string>
    <string name="cards_sets">Сеты слов</string>
    <string name="create_set">Создать сет</string>
    <string name="all_words">Все слова</string>
    <string name="all_words_description">Все твои сохранённые /nслова</string>
    <string name="basic_verbs">Базовые глаголы</string>
    <string name="basic_verbs_description">Базовые глаголы для /nизучения</string>
    <string name="basic_adjectives">Базовые прилагательные</string>
    <string name="match">Сопоставить</string>
    <string name="test">Тест</string>
    <string name="text_cards">Карточки</string>
    <string name="word">Слово</string>
    <string name="translation">Перевод</string>
    <string name="create_word">Создать</string>
    <string name="set_name">Название сета</string>
    <string name="set_description">Описание сета</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="grammar_training_title">Грамматический тренинг</string>
    <string name="grammar_training_description">Вставь пропущенное слово/словосочетание, используя грамматические правила</string>
    <string name="qa_title">Ответ на вопрос</string>
    <string name="qa_description">Ответь на случайный вопрос и проверь свой ответ на корректность</string>
    <string name="translation_title">Перевод текста</string>
    <string name="translation_description">Переведи предложенный текст и проверь свой перевод на наличие ошибок</string>
    <string name="grammar_description">Выбери необходимую тебе тему в разделе “Теория” и пройди упражнения после ознакомления с краткой грамматической справкой</string>
    <string name="text_view_or">или</string>
    <string name="choose_topic">Введи интересующую тебя тему...</string>
    <string name="move_to_exercises">Перейти к упражнениям</string>
    <string name="your_answer">Твой ответ...</string>
    <string name="check">Проверить</string>
    <string name="answer_to_question">Ответ на вопрос</string>
    <string name="generate_question">Сгенерировать вопрос</string>
    <string name="answer_question">Введи ответ на вопрос...</string>
    <string name="question">Вопрос</string>
    <string name="qa_your_answer">Твой ответ</string>
    <string name="correct_answer">Исправленный ответ</string>
    <string name="explanation">Объяснение</string>
    <string name="interesting_translation_topic">Введи название интересующей тебя темы текста...</string>
    <string name="generate_text">Сгенерировать текст</string>
    <string name="translate_text">Переведи текст здесь...</string>
    <string name="text">Текст</string>
    <string name="correct_translation">Исправленный перевод</string>
    <string name="example">Пример</string>
    <string name="common_mistakes">Распространенные ошибки</string>
    <string name="dictionary">Словарь</string>
    <string name="search">Поиск...</string>
    <string name="skip">Пропустить</string>
    <string name="eng_rus">Английский-Русский  🇬🇧</string>
    <string name="rus_eng">Русский-Английский  🇷🇺</string>
    <string name="friends">Друзья</string>
    <string name="my_friends">Мои друзья</string>
    <string name="friends_requests">Заявки в друзья</string>
    <string name="no_requests">Пока что нет заявок в друзья</string>
    <string name="flip_card">Нажми на карточку, чтобы перевернуть</string>
    <string name="find_compamion">Найти собеседника</string>
    <string name="message">Сообщение...</string>
    <string name="all_cards_learned">Поздравляем! Все слова изучены!</string>
    <string name="start_again">Начать заново</string>
    <string name="cards_keep_learning">Прекрасно! Продолжайте изучение!</string>
    <string name="keep_learning">Продолжить изучение</string>
</resources>