<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.user.main_exercises.exercises.grammar_training.GrammarTrainingFragment">

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:drawableStart="@drawable/ic_back"
        android:drawablePadding="8dp"
        android:padding="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textViewGrammar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grammar_training_title"
        android:textColor="@color/start_text"
        android:fontFamily="@font/montserrat"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/textViewGrammarDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/grammar_description"
        android:textSize="18sp"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/start_text"
        android:layout_marginTop="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewGrammar"/>

    <TextView
        android:id="@+id/textViewOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_or"
        android:fontFamily="@font/montserrat"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/start_text"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/textViewGrammarDescription"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/editTextChooseTopic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/start_text"
        android:hint="@string/choose_topic"
        android:gravity="center"
        android:textSize="18sp"
        android:fontFamily="@font/montserrat"
        android:layout_marginTop="20dp"
        android:paddingVertical="16dp"
        android:background="@android:color/transparent"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewOr"/>

    <ImageView
        android:id="@+id/imageViewCat"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:src="@mipmap/icon_exercise_cat_foreground"
        android:layout_marginTop="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextChooseTopic"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonMoveToExercises"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/move_to_exercises"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/background_profile"
        android:textSize="16sp"
        android:textStyle="bold"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/start_text"
        android:paddingVertical="28dp"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewCat"/>

    <ImageView
        android:id="@+id/imageViewGif"
        android:layout_width="260dp"
        android:layout_height="260dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>