<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".presentation.AuthFragment">

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:drawableStart="@drawable/ic_back"
        android:drawablePadding="8dp"
        android:padding="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/come_in"
        android:textColor="@color/start_text"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="34dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        android:id="@+id/imageViewKoala"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:src="@mipmap/icon_koala_foreground"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/signIn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:importantForAccessibility="no" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:hint="@string/email"
        android:layout_marginTop="60dp"
        android:textSize="22sp"
        android:textColorHint="@color/border"
        android:fontFamily="@font/montserrat"
        android:background="@drawable/border_edit_text"
        app:layout_constraintTop_toBottomOf="@id/imageViewKoala"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:hint="@string/password"
        android:layout_marginTop="20dp"
        android:textSize="22sp"
        android:fontFamily="@font/montserrat"
        android:textColorHint="@color/border"
        android:background="@drawable/border_edit_text"
        app:layout_constraintTop_toBottomOf="@id/editTextEmail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        android:id="@+id/imageViewEye"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintTop_toTopOf="@id/editTextPassword"
        app:layout_constraintRight_toRightOf="@id/editTextPassword"
        android:src="@mipmap/icon_eye_foreground"/>

    <Button
        android:id="@+id/buttonAuth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_to_account"
        android:fontFamily="@font/alice_regular"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:textSize="22sp"
        android:textColor="@color/start_text"
        android:background="@drawable/rounded_button"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>