<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:drawableStart="@drawable/ic_back"
        android:drawablePadding="8dp"
        android:padding="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textViewLearned"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/learned"
        android:textColor="@color/start_text"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewLearnedWords"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="16dp"
        tools:listitem="@layout/item_word"
        app:layout_constraintTop_toBottomOf="@id/textViewLearned"
        app:layout_constraintBottom_toTopOf="@id/buttonLearnedWords"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        android:id="@+id/imageViewItem"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_marginTop="160dp"
        android:src="@mipmap/icon_hedgehog_foreground"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewLearned"/>

    <TextView
        android:id="@+id/textViewTitleEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_yet_learned"
        android:textColor="@color/start_text"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@id/imageViewItem"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/textViewDescriptionEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_studying"
        android:textColor="@color/border"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/textViewTitleEmpty"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLearnedWords"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/repeat"
        android:textStyle="bold"
        android:textColor="@color/background_profile"
        android:textSize="24sp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/start_text"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>