<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".presentation.StartFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/purple_blob"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:importantForAccessibility="no" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/pink_blob"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/start_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_text"
        android:gravity="center"
        android:fontFamily="@font/alice_regular"
        android:textColor="@color/start_text"
        android:textSize="40sp"
        android:layout_marginTop="280dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonAuth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/come_in"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/alice_regular"
        android:layout_marginTop="70dp"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="@color/start_text"
        android:layout_marginStart="40dp"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/start_text"
        app:layout_constraintLeft_toLeftOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:background="@drawable/rounded_button"
        android:textSize="26sp"
        android:textStyle="bold"
        android:fontFamily="@font/alice_regular"
        android:textColor="@color/start_text"
        android:layout_marginStart="40dp"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/buttonAuth"
        app:layout_constraintLeft_toLeftOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>