<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:src="@drawable/bottom_sheet_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.user.main_exercises.cards.adding_word.AddWordFragment">

    <EditText
        android:id="@+id/editTextWordTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/word"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/border"
        android:textColorHint="@color/border"
        android:paddingVertical="14dp"
        android:background="@null"
        android:layout_marginTop="14dp"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/editTextWordTranslation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/translation"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/border"
        android:textColorHint="@color/border"
        android:fontFamily="@font/montserrat"
        android:paddingVertical="14dp"
        android:background="@null"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/editTextWordTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCardSets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        tools:listitem="@layout/item_set_horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonAddWord"
        app:layout_constraintTop_toBottomOf="@id/editTextWordTranslation"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonAddWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/create_word"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/montserrat"
        android:background="@color/background_profile"
        android:textColor="@color/border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewCardSets"/>

</androidx.constraintlayout.widget.ConstraintLayout>