<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_profile"
    tools:context=".presentation.user.main_exercises.exercises.translation.TranslationFragment">

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:drawableStart="@drawable/ic_back"
        android:drawablePadding="8dp"
        android:padding="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textViewTranslation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/translation_title"
        android:textColor="@color/start_text"
        android:fontFamily="@font/montserrat"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/textViewInterestingTopic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/start_text"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/textViewTranslation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/editTranslationTopic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:gravity="center"
        android:hint="@string/interesting_translation_topic"
        android:fontFamily="@font/montserrat"
        android:textColorHint="@color/start_text"
        android:paddingHorizontal="20dp"
        android:background="@color/background_profile"
        android:textColor="@color/start_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewInterestingTopic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonGenerateText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generate_text"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/montserrat"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/start_text"
        android:layout_marginHorizontal="20dp"
        android:paddingVertical="20dp"
        android:layout_marginBottom="32dp"
        android:textColor="@color/background_profile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/imageViewGif"
        android:layout_width="260dp"
        android:layout_height="260dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>